--- a/wega.css
+++ b/wega.css
@@ -19,3 +19,10 @@ h3{
   font-family: sans-serif;
   text-align:center;
 }
+p{
+  color:gray;
+  font-family: sans-serif;
+  text-align:bottom;
+  size:50%;
+  opacity: 50%;
+}
